--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -38,6 +38,9 @@
 						{% block content %}
 						{% endblock %}
 					</div>
+
+					{% block contentFooter %}
+					{% endblock %}
 				</article>
 				{% block comments %}
 				{% endblock %}
