Add tag templates.

--- a/src/css/blocks/core/media-text.css
+++ b/src/css/blocks/core/media-text.css
@@ -14,7 +14,7 @@
 }
 
 @supports (grid-area: auto) {
-	@media (--breakpoint-1) {
+	@media (--screen-sm) {
 		.wp-block-media-text {
 			grid-template-areas: "media-text-media media-text-content";
 			grid-template-columns: repeat(2, 1fr);
@@ -33,7 +33,7 @@
 		}
 	}
 
-	@media (--breakpoint-2) {
+	@media (--screen-md) {
 		.wp-block-media-text.alignfull {
 			grid-template-areas: "media-text-start media-text-media media-text-content media-text-end";
 			grid-template-columns: auto minmax(0, calc(var(--max-width-wide) / 2 - var(--spacing-2x))) minmax(0, calc(var(--max-width-wide) / 2 - var(--spacing-2x))) auto;
