--- a/src/css/objects/layouts.css
+++ b/src/css/objects/layouts.css
@@ -14,7 +14,7 @@
 	align-items: center;
 }
 
-@media (--breakpoint-1) {
+@media (--screen-sm) {
 
 	@supports (grid-area: auto) {
 
@@ -24,16 +24,7 @@
 			grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
 
 			&--blog {
-				grid-template-columns: repeat(6, 1fr);
-
-				> .entry {
-					grid-column: span 2;
-				}
-
-				> .archive-header,
-				.pagination {
-					grid-column: 1 / -1;
-				}
+				grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
 			}
 		}
 
