--- a/src/css/elements/lists.css
+++ b/src/css/elements/lists.css
@@ -1,6 +1,6 @@
 ul,
 ol {
-	margin: 0 0 var(--spacing-4x) var(--spacing-2x);
+	margin: 0 0 var(--spacing-4x);
 	padding: 0 0 0 var(--spacing-3x);
 }
 
