--- a/src/site/_includes/components/pagination.njk
+++ b/src/site/_includes/components/pagination.njk
@@ -3,7 +3,7 @@
 		<ol class="pagination__items reset-list">
 			{%- for pageEntry in pagination.pages %}
 				<li class="pagination__item">
-					<a class="pagination__anchor font-sans font-bold has-md-font-size" href="{{ pagination.hrefs[ loop.index - 1 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}><span class="screen-reader-text">Page</span> {{ loop.index }}</a>
+					<a class="pagination__anchor font-sans font-bold has-md-font-size block" href="{{ pagination.hrefs[ loop.index - 1 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}><span class="screen-reader-text">Page</span> {{ loop.index }}</a>
 				</li>
 			{%- endfor %}
 		</ol>
