--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,9 +49,9 @@
 @import "objects/animations.css";
 @import "objects/flow-spacing.css";
 @import "objects/helpers.css";
+@import "objects/icon.css";
 @import "objects/layouts.css";
 @import "objects/max-widths.css";
-@import "objects/svg.css";
 
 
 /*--------------------------------------------------------------
