--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -14,9 +14,9 @@
 	</head>
 	<body>
 		<div class="site mx-auto max-w-2xl">
-			<header class="site-header py-2 has-grey-900-background-color">
+			<header class="site-header has-grey-900-background-color">
 				<a class="skip-link screen-reader-text" href="#main">Hyppää sisältöön</a>
-				<div class="site-header__wrapper px-2 has-white-color">
+				<div class="site-header__wrapper py-2 px-2 has-white-color">
 					<p class="site-header__title has-text-align-center h3 font-sans mb-0"><a class="has-white-color no-underline focus-inherit uppercase tracking-md f-w-800" href="/">{{ site.title }}</a></p>
 					<p class="site-header__desc has-text-align-center mb-0">{{ site.shortDesc }}</p>
 				</div>
