--- a/src/css/components/entry.css
+++ b/src/css/components/entry.css
@@ -45,13 +45,13 @@
 }
 
 .entry-archive__anchor {
-	color: var(--color-grey-800);
+	color: var(--color-grey-900);
 	text-decoration: none;
 
 	&:hover,
 	&:focus,
 	&:active {
-		color: var(--color-primary);
+		color: var(--color-primary-700);
 		text-decoration: underline;
 	}
 }
@@ -62,7 +62,7 @@
 }
 
 .entry__terms-anchor {
-	background-color: var(--color-primary-100);
+	background-color: var(--color-grey-200);
 	border-radius: 2px;
 	color: var(--color-grey-900);
 	padding: var(--spacing) var(--spacing-2x);
