--- a/src/css/elements/forms.css
+++ b/src/css/elements/forms.css
@@ -23,12 +23,13 @@ input[type="color"],
 textarea,
 select {
 	background-color: var(--color-white);
-	border: 2px solid var(--color-primary);
+	border: 2px solid var(--color-grey-400);
 	border-radius: 0;
 	padding: var(--spacing);
 	width: 100%;
 
 	&:focus {
+		border-color: var(--color-primary-800);
 		box-shadow: 0 0 4px var(--color-primary-shadow);
 		/* Use transparent outline for Windows high contrast mode. */
 		outline: 2px solid transparent;
