--- a/src/css/elements/headings.css
+++ b/src/css/elements/headings.css
@@ -4,7 +4,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: var(--color-primary-900);
+	color: var(--color-grey-900);
 	font-family: var(--font-family-sans);
 	margin: 0 0 var(--spacing-2x);
 }
