--- a/src/css/elements/links.css
+++ b/src/css/elements/links.css
@@ -1,11 +1,11 @@
 a {
-	color: var(--color-primary);
+	color: var(--color-primary-700);
 	transition: all var(--transition-duration-md) ease-in-out;
 
 	&:hover,
 	&:focus,
 	&:active {
-		color: var(--color-primary-900);
+		color: var(--color-grey-900);
 	}
 
 	&:focus {
