--- a/src/css/settings/colors.css
+++ b/src/css/settings/colors.css
@@ -1,18 +1,28 @@
 :root {
-	--primary-hue: 245;
-	--color-primary-hsl: var(--primary-hue), 80%, 43%;
+	--primary-hue: 168;
+	--color-primary-hsl: var(--primary-hue), 78%, 41%;
 	--color-primary: hsl(var(--color-primary-hsl));
-	--color-primary-100: hsl(var(--primary-hue), 20%, 97%);
-	--color-primary-900: hsl(var(--primary-hue), 82%, 7%);
+	--color-primary-100: hsl(var(--primary-hue), 67%, 96%);
+	--color-primary-200: hsl(var(--primary-hue), 75%, 87%);
+	--color-primary-300: hsl(var(--primary-hue), 73%, 74%);
+	--color-primary-400: hsl(var(--primary-hue), 70%, 63%);
+	--color-primary-500: var(--color-primary);
+	--color-primary-600: hsl(var(--primary-hue), 91%, 32%);
+	--color-primary-700: hsl(var(--primary-hue), 94%, 26%);
+	--color-primary-800: hsl(var(--primary-hue), 98%, 20%);
+	--color-primary-900: hsl(var(--primary-hue), 100%, 13%);
 
-	--color-primary-shadow: hsla(var(--color-primary-hsl), 0.75);
-	--color-grey-100: hsla(0, 0%, 0%, 0.1);
-	--color-grey-250: hsl(0, 0%, 25%);
-	--color-grey-500: hsla(0, 0%, 0%, 0.5);
-	--color-grey-600: hsla(0, 0%, 0%, 0.6);
-	--color-grey-700: hsla(0, 0%, 0%, 0.7);
-	--color-grey-800: hsla(0, 0%, 0%, 0.8);
-	--color-grey-900: hsla(0, 0%, 0%, 0.9);
+	--color-grey-100: hsla(0, 0%, 97%);
+	--color-grey-200: hsla(0, 0%, 93%);
+	--color-grey-300: hsla(0, 0%, 81%);
+	--color-grey-400: hsla(0, 0%, 69%);
+	--color-grey-500: hsla(0, 0%, 49%);
+	--color-grey-600: hsla(0, 0%, 38%);
+	--color-grey-700: hsla(0, 0%, 32%);
+	--color-grey-800: hsla(0, 0%, 23%);
+	--color-grey-900: hsl(0, 0%, 13%);
+
+	--color-primary-shadow: var(--color-primary);
 
 	--color-success-100: hsl(152, 68%, 96%);
 	--color-success-500: hsl(164, 71%, 34%);
