--- a/src/css/utilities/accessibility.css
+++ b/src/css/utilities/accessibility.css
@@ -18,7 +18,7 @@
 	word-wrap: normal !important;
 
 	&:focus {
-		background-color: var(--color-primary);
+		background-color: var(--color-primary-700);
 		clip: auto !important;
 		clip-path: none;
 		color: var(--color-white);
