--- a/src/site/_includes/components/comments.njk
+++ b/src/site/_includes/components/comments.njk
@@ -4,7 +4,7 @@
 	<section class="comments-template mx-auto max-w-md">
 		{% if postComments | length %}
 			<div class="comments flow-spacing mt-8" id="comments">
-				<h2 class="comments__title">Comments</h2>
+				<h2 class="comments__title">Kommentit</h2>
 				<ol class="comments__list reset-list flow-spacing">
 					{%- for comment in postComments | reverse -%}
 						<li class="flow-spacing flow-spacing--lg">
@@ -24,39 +24,39 @@
 
 		{% if commentStatus === 'open' %}
 			<div id="respond" class="comment-respond flow-spacing mt-8">
-				<h2 class="comment-respond__reply-title h3">Leave a Reply</h2>
+				<h2 class="comment-respond__reply-title h3">Jätä kommentti</h2>
 
 				<form method="post" id="commentform" class="comment-respond__form flow-spacing js-comment-respond-form">
 					<input type="hidden" id="postId" value={{ id }} />
-					<p class="comment-respond__notes">Your email address will not be published. Required fields are marked <span class="required">*</span></p>
+					<p class="comment-respond__notes">Sähköpostiasi ei julkaista. Pakolliset kentät on merkitty <span class="required">*</span></p>
 					<p class="comment-respond__field comment-respond__field--comment">
-						<label for="comment">Comment <span class="required">*</span></label>
+						<label for="comment">Kommentti <span class="required">*</span></label>
 						<textarea id="comment" name="comment" required></textarea>
 					</p>
 
 					<p class="comment-respond__field comment-respond__field--name">
-						<label for="name">Name <span class="required">*</span></label>
+						<label for="name">Nimi <span class="required">*</span></label>
 						<input id="name" name="name" type="text" value="" required>
 					</p>
 
 					<p class="comment-respond__field comment-respond__field--email">
-						<label for="email">Email <span class="required">*</span></label>
+						<label for="email">Sähköposti <span class="required">*</span></label>
 						<input id="email" name="email" type="email" value="" required>
 					</p>
 
 					<p class="comment-respond__field comment-respond__field--url">
-						<label for="url">Website</label>
+						<label for="url">Kotisivu</label>
 						<input id="url" name="url" type="url" value="">
 					</p>
 
 					<p class="comment-respond__field comment-respond__field--address" hidden>
-						<label for="address">Address</label>
+						<label for="address">Osoite</label>
 						<input id="address" name="address" type="text" value="">
 					</p>
 
 					<p class="comment-respond__field comment-respond__field--submit">
 						<button name="submit" type="submit" id="submit" class="comment-respond__submit" value="Post Comment">
-							Post Comment
+							Lähetä kommentti
 							<svg aria-hidden="true" focusable="false" role="img" class="svg spinner is-hidden js-spinner" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
 								<rect class="spinner__rect" x="0" y="0" width="100" height="100" fill="none"></rect>
 								<circle class="spinner__circle" cx="50" cy="50" r="40" stroke="#999999" fill="none" stroke-width="6" stroke-linecap="round"></circle>
