--- a/src/site/_includes/components/nav.njk
+++ b/src/site/_includes/components/nav.njk
@@ -14,7 +14,7 @@
         {% endif %}
 
         <li class="nav__item">
-          <a class="nav__anchor" href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
+          <a class="nav__anchor block" href="{{ item.url }}"{{ relAttribute | safe }}{{ currentAttribute | safe }}>{{ item.text }}</a>
         </li>
       {% endfor %}
     </ul>
